# nd-toad

./: .gitignore  PLAN.md  README.md  pyproject.toml
docs/: input-formats.md
samples/: SOURCES.md
samples/checkpoint/: gaia_r81_show_configuration.conf
samples/cisco_ftd/: ftd72_lina_running_config.conf
samples/cisco_xe/: synthetic_cat9k_isr4k.conf
samples/hpe_aruba/: aos_cx_running_config.conf  aos_s_procurve_running_config.conf
samples/huawei_vrp/: glw119_s5735s_switch.conf  synthetic_ne_router.conf
samples/junos/: pastebin_junos_core_switch_set.conf  pastebin_junos_srx_curly.conf  pastebin_p04_full.conf  pastebin_srx300_curly.conf
samples/nokia_sros/: hellt_baseline.cfg  karneliuk_SR1.cfg
samples/sonicwall/: sonicos7_ecli_export.conf
samples/sophos_xg/: sophos_xg_backup_structure.xml
samples/vmware_nsx/: synthetic_nsx_bundle.json
samples/vmware_velocloud/: synthetic_edge_combined.json
src/fluff/: __init__.py  banner.py  checks_loader.py  cli.py  policy.py
src/fluff/checks/: cis_catalog.yaml  generic.yaml
src/fluff/detect/: fingerprints.py  models.py
src/fluff/engine/: models.py  probe.py  runner.py
src/fluff/hooks/: mgmt_acl.py  panos_policy.py  policy_any_any.py
src/fluff/parsers/: arista_eos.py  base.py  checkpoint.py  cisco_asa.py  cisco_ftd.py  cisco_ios.py  cisco_like.py  cisco_nxos.py  cisco_xe.py  cisco_xr.py  f5_bigip.py  fortios.py  hpe_aruba.py  huawei_vrp.py  (+10 more)
tests/: conftest.py  test_cli.py  test_detect.py  test_engine.py  test_parsers.py  test_policy.py  test_report.py
tools/: nsx_collector.py  velo_collector.py
(+43 files in other folders)
