[project]
name = "nd-goat"
version = "0.1.0"
description = "Offline network device configuration security auditor with CIS L1 mapping"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "ND-GOAT Contributors"}]
keywords = ["network", "security", "audit", "cis", "firewall", "cisco", "juniper", "palo-alto", "fortinet"]
dependencies = [
    "ciscoconfparse2>=0.7",
    "hier-config>=2.2",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
nd-goat = "fluff.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
